// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Componente de transação do extrato O Snapshot da lista deve sempre pernanecer a mesma 1`] = `
<div
  data-testid="transacoes"
>
  <div
    class="transacao-container"
  >
    <p>
      20.00
    </p>
    <p />
    <p>
      R$ 
      saque
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      50.00
    </p>
    <p />
    <p>
      R$ 
      deposito
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      10.00
    </p>
    <p />
    <p>
      R$ 
      deposito
    </p>
  </div>
  <div
    class="transacao-container"
  >
    <p>
      10.00
    </p>
    <p />
    <p>
      R$ 
      saque
    </p>
  </div>
</div>
`;

exports[`Componente de transação do extrato O snapshot do componente deve permanecer sempre o mesmo 1`] = `
<div
  class="transacao-container"
>
  <p>
    08/09/2020
  </p>
  <p>
    saque
  </p>
  <p>
    R$ 
    20.00
  </p>
</div>
`;
